--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -59,6 +59,10 @@
     background-color: var(--cui-body-bg) !important;
 }
 
+.react-select__input-container{
+        color: var(--cui-body-color) !important;
+}
+
 .react-select__menu-list{
     background-color: var(--cui-body-bg) !important;
     border: 1px solid rgba(190, 190, 190, 0.356);
