--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -100,3 +100,52 @@
     color: var(--cui-body-bg);
     background-color: var(--cui-body-color);
 }
+
+.product-table-image{
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    object-fit: cover;
+}
+
+.product-table-image-container{
+    position: relative;
+    /* background-color: red !important; */
+}
+
+.product-table-image-container:hover .product-table-image-selection{
+    display: flex;
+}
+
+.product-table-image-selection{
+    position: absolute;
+    /* bottom: 100%; */
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--cui-body-color);
+    z-index: 10000;
+    padding: 10%;
+    backdrop-filter: blur(5px);
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 7px;
+}
+
+.product-table-image-selection input[type="file"]{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+}
+
+.product-table-image-selection-icon{
+    color: var(--cui-body-bg) !important;
+    font-size: 100px;
+}
