work on updating purchase

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -154,9 +154,9 @@
     font-size: 100px;
 }
 
-/* input{
+table.purchase-details input{
     min-width: 100px;
-} */
+}
 
 
 .purchase-details-card-body{
