Started working on Sale Products

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -194,3 +194,7 @@ table.purchase-details input{
     min-width: 60vw !important;
     max-width: 80vw !important;
 }
+
+.w100px{
+    width: 200px;
+}
